Fix bug: To avoid that the toc covers the site navigation, we should modify the z-index of  the site navigation instead of the one of the toc

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -30,6 +30,7 @@
 
 .site-nav {
   position: absolute;
+  z-index: 1;
   top: 9px;
   right: $spacing-unit / 2;
   background-color: $background-color;
@@ -420,7 +421,6 @@
   overflow: scroll;
 
   position: fixed;
-  z-index: -1;
   left: $spacing-unit;
   top: $spacing-unit * 4;
   width: calc((100vw - #{$content-width}) / 2 - #{$spacing-unit} * 2);
